--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -377,6 +377,7 @@
             if (tabName === 'applications') loadApplications();
             if (tabName === 'resources') loadResources();
             if (tabName === 'notices') loadNotices();
+            if (tabName === 'lectures') loadLectures();
         }
 
         // ... [Existing Application Logic] ...
@@ -801,7 +802,8 @@
 
         function loadLectures() {
             const container = document.getElementById('courseListSidebar');
-            if (container.innerHTML.trim() !== "") return; // Avoid duplicate loading
+            // Check children length instead of innerHTML because of comments
+            if (container.children.length > 0) return;
 
             const baseStyle = "w-full text-left px-4 py-3 text-sm text-gray-600 hover:text-indigo-600 hover:bg-slate-50 border-l-[3px] border-transparent hover:border-indigo-600 transition-all flex items-center gap-2 truncate";
 
