Split AI Basics course into 5 separate lecture pages for better granularity

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -685,7 +685,11 @@
                 title: '01. AI 기초 (Basics)',
                 path: 'c01_basics',
                 lectures: [
-                    { title: 'Day 1: AI의 이해와 활용', file: 'textbook_basics_day1.html' }
+                    { title: 'Session 1: AI의 이해와 도구 세팅', file: 'textbook_basics_01_understanding.html' },
+                    { title: 'Session 2: 프롬프트 엔지니어링', file: 'textbook_basics_02_prompt.html' },
+                    { title: 'Session 3: 업무 시간 단축', file: 'textbook_basics_03_productivity.html' },
+                    { title: 'Session 4: 검색과 데이터 분석', file: 'textbook_basics_04_analysis.html' },
+                    { title: 'Session 5: 나만의 AI 비서 & 마무리', file: 'textbook_basics_05_assistant.html' }
                 ]
             },
             {
