Split AI Business course into 10 separate lecture pages (Day 1 & 2)

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -694,11 +694,21 @@
             },
             {
                 id: 'c02',
-                title: '02. AI 비즈니스 (Business)',
+                title: '02. AI 비즈니스 전략 (Business)',
                 path: 'c02_business',
                 lectures: [
-                    { title: 'Day 1: AI 트렌드와 기회', file: 'textbook_business_day1.html' },
-                    { title: 'Day 2: AI 도입 전략', file: 'textbook_business_day2.html' }
+                    // Day 1
+                    { title: 'Day 1-1: 글로벌 AI 트렌드', file: 'textbook_business_01_01_trends.html' },
+                    { title: 'Day 1-2: 비즈니스 AI 구조', file: 'textbook_business_01_02_structure.html' },
+                    { title: 'Day 1-3: 주요 AI 기술 (Vision)', file: 'textbook_business_01_03_tech.html' },
+                    { title: 'Day 1-4: 고성능 문서 제작', file: 'textbook_business_01_04_docs.html' },
+                    { title: 'Day 1-5: Vibe Coding 기초', file: 'textbook_business_01_05_vibe.html' },
+                    // Day 2
+                    { title: 'Day 2-1: 프롬프트 엔지니어링', file: 'textbook_business_02_01_prompt.html' },
+                    { title: 'Day 2-2: 주요 AI 기술 (NLP)', file: 'textbook_business_02_02_nlp.html' },
+                    { title: 'Day 2-3: Vibe Coding & API', file: 'textbook_business_02_03_api.html' },
+                    { title: 'Day 2-4: 프로젝트 기획 & 웹앱', file: 'textbook_business_02_04_project.html' },
+                    { title: 'Day 2-5: AI 윤리 & 마무리', file: 'textbook_business_02_05_ethics.html' }
                 ]
             },
             {
