--- a/ai-lecture-room/index.html
+++ b/ai-lecture-room/index.html
@@ -1,15 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Lecture System - Kim Sun-jung</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- PDF.js 라이브러리 추가 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-<script type="importmap">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smart Lecture System - Kim Sun-jung</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- PDF.js 라이브러리 추가 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
@@ -19,20 +19,21 @@
   }
 }
 </script>
-<style>
-  /* PDF 렌더링 캔버스 스타일 */
-  #pdf-canvas {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    margin: auto;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.3);
-  }
-</style>
-<link rel="stylesheet" href="/index.css">
+  <style>
+    /* PDF 렌더링 캔버스 스타일 */
+    #pdf-canvas {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      margin: auto;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+    }
+  </style>
 </head>
+
 <body class="bg-gray-900 text-gray-100 overflow-hidden">
-    <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
