Update curriculum titles and regenerate search index

--- a/c05_marketing/classroom_marketing.html
+++ b/c05_marketing/classroom_marketing.html
@@ -88,7 +88,7 @@
                             <span
                                 class="text-indigo-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">01</span>
                             <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 1: AI 마케팅 개요 및
-                                트렌드 (Day 1 오전)</h2>
+                                트렌드</h2>
                             <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">AI 마케팅의 현재와 미래, 주요
                                 트렌드 분석</p>
                         </div>
@@ -122,7 +122,7 @@
                             <span
                                 class="text-emerald-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">02</span>
                             <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 2: 고객 페르소나 및 타겟팅
-                                전략 (Day 1 오후)</h2>
+                                전략</h2>
                             <p class="text-emerald-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">데이터 기반의 정교한 고객 타겟팅
                                 및 페르소나 설정</p>
                         </div>
@@ -155,8 +155,7 @@
                         <div>
                             <span
                                 class="text-blue-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">03</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 3: AI 카피라이팅 기초
-                                (Day 2 오전)</h2>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 3: AI 카피라이팅 기초</h2>
                             <p class="text-blue-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">설득력 있는 마케팅 문구 작성을 위한
                                 AI 활용법</p>
                         </div>
@@ -190,7 +189,7 @@
                             <span
                                 class="text-purple-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">04</span>
                             <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 4: 채널별 맞춤 텍스트 콘텐츠
-                                실습 (Day 2 오후)</h2>
+                                실습</h2>
                             <p class="text-purple-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">블로그, SNS, 이메일 등 채널
                                 최적화 콘텐츠 제작</p>
                         </div>
@@ -223,8 +222,7 @@
                         <div>
                             <span
                                 class="text-pink-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">05</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 5: AI 이미지 생성 프롬프트
-                                (Day 3 오전)</h2>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 5: AI 이미지 생성 프롬프트</h2>
                             <p class="text-pink-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">Midjourney, DALL-E 3
                                 등을 활용한 이미지 생성 기초</p>
                         </div>
@@ -258,8 +256,7 @@
                         <div>
                             <span
                                 class="text-orange-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">06</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 6: 디자인 자동화 (Day 3
-                                오후)</h2>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 6: 디자인 자동화</h2>
                             <p class="text-orange-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">광고 배너, 상세페이지 디자인 자동화
                                 실습</p>
                         </div>
@@ -293,8 +290,7 @@
                         <div>
                             <span
                                 class="text-amber-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">07</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 7: 숏폼 영상 기획 및 생성
-                                (Day 4 오전)</h2>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 7: 숏폼 영상 기획 및 생성</h2>
                             <p class="text-amber-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">릴스, 틱톡, 쇼츠를 위한 숏폼 영상
                                 자동 생성</p>
                         </div>
@@ -329,7 +325,7 @@
                             <span
                                 class="text-teal-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">08</span>
                             <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 8: 퍼포먼스 마케팅 데이터
-                                분석 (Day 4 오후)</h2>
+                                분석</h2>
                             <p class="text-teal-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">광고 성과 분석 및 인사이트 도출</p>
                         </div>
                         <a href="lecture_marketing_class08.html"
@@ -361,8 +357,7 @@
                         <div>
                             <span
                                 class="text-cyan-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">09</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 9: 마케팅 자동화 파이프라인
-                                (Day 5 오전)</h2>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 9: 마케팅 자동화 파이프라인</h2>
                             <p class="text-cyan-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">Zapier/Make를 활용한 업무
                                 자동화 구축</p>
                         </div>
@@ -396,7 +391,7 @@
                             <span
                                 class="text-gray-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">10</span>
                             <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 10: 실전 캠페인 기획 및
-                                발표 (Day 5 오후)</h2>
+                                발표</h2>
                             <p class="text-gray-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">종합 프로젝트 수행 및 피드백</p>
                         </div>
                         <a href="lecture_marketing_class10.html"
