--- a/c06_manufacturing/classroom_manufacturing.html
+++ b/c06_manufacturing/classroom_manufacturing.html
@@ -78,8 +78,7 @@
                     <div>
                         <span
                             class="text-indigo-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">01</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 1: 제조업의 AI 혁신 (Day 1
-                            오전)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 1: 제조업의 AI 혁신</h2>
                         <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">Smart Factory 개요 및 AI 적용
                             사례</p>
                     </div>
@@ -111,8 +110,7 @@
                     <div>
                         <span
                             class="text-emerald-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">02</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 2: IoT 센서 데이터 수집 (Day
-                            1 오후)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 2: IoT 센서 데이터 수집</h2>
                         <p class="text-emerald-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">현장 데이터 수집 및 전처리 실습</p>
                     </div>
                     <a href="lecture_manufacturing_class02.html"
@@ -143,8 +141,7 @@
                     <div>
                         <span
                             class="text-blue-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">03</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 3: 컴퓨터 비전 품질 검사 (Day
-                            2 오전)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 3: 컴퓨터 비전 품질 검사</h2>
                         <p class="text-blue-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">이미지 처리를 통한 불량 검출 기초</p>
                     </div>
                     <a href="lecture_manufacturing_class03.html"
@@ -176,8 +173,7 @@
                     <div>
                         <span
                             class="text-purple-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">04</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 4: 딥러닝 불량 탐지 실습 (Day
-                            2 오후)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 4: 딥러닝 불량 탐지 실습</h2>
                         <p class="text-purple-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">실제 제조 결함 데이터를 활용한 모델링
                         </p>
                     </div>
@@ -209,8 +205,7 @@
                     <div>
                         <span
                             class="text-pink-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">05</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 5: 예지 보전(PdM)의 이해
-                            (Day 3 오전)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 5: 예지 보전(PdM)의 이해</h2>
                         <p class="text-pink-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">설비 고장을 미리 예측하는 AI 기술</p>
                     </div>
                     <a href="lecture_manufacturing_class05.html"
@@ -241,8 +236,7 @@
                     <div>
                         <span
                             class="text-orange-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">06</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 6: 고장 예측 모델링 (Day 3
-                            오후)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 6: 고장 예측 모델링</h2>
                         <p class="text-orange-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">시계열 데이터를 활용한 잔여 수명 예측
                         </p>
                     </div>
@@ -276,8 +270,7 @@
                     <div>
                         <span
                             class="text-amber-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">07</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 7: 수요 예측 및 재고 최적화
-                            (Day 4 오전)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 7: 수요 예측 및 재고 최적화</h2>
                         <p class="text-amber-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">SCM 효율화를 위한 AI 활용</p>
                     </div>
                     <a href="lecture_manufacturing_class07.html"
@@ -309,7 +302,7 @@
                         <span
                             class="text-teal-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">08</span>
                         <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 8: 공정 최적화 및 Digital
-                            Twin (Day 4 오후)</h2>
+                            Twin</h2>
                         <p class="text-teal-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">생산 효율 극대화를 위한 시뮬레이션</p>
                     </div>
                     <a href="lecture_manufacturing_class08.html"
@@ -340,8 +333,7 @@
                     <div>
                         <span
                             class="text-cyan-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">09</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 9: 생성형 AI와 제조업 (Day 5
-                            오전)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 9: 생성형 AI와 제조업</h2>
                         <p class="text-cyan-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">제품 설계 및 지식 관리 혁신</p>
                     </div>
                     <a href="lecture_manufacturing_class09.html"
@@ -373,8 +365,7 @@
                     <div>
                         <span
                             class="text-gray-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">10</span>
-                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 10: 제조 AI 프로젝트 (Day 5
-                            오후)</h2>
+                        <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 10: 제조 AI 프로젝트</h2>
                         <p class="text-gray-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">종합 프로젝트 수행 및 로드맵 수립</p>
                     </div>
                     <a href="lecture_manufacturing_class10.html"
