Fix remaining Morning/Afternoon curriculum labels in Ethics and Leadership courses

--- a/c09_leadership/management_leadership.html
+++ b/c09_leadership/management_leadership.html
@@ -251,7 +251,7 @@
                                 1
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">오전: AI 패러다임 시프트</h3>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">Class 1: AI 패러다임 시프트</h3>
                                 <p class="text-gray-600 mb-4">경영진이 반드시 알아야 할 AI 기술의 본질과 미래</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
@@ -283,7 +283,7 @@
                                 2
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">오후: AI 도입 전략 & 의사결정</h3>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">Class 2: AI 도입 전략 & 의사결정</h3>
                                 <p class="text-gray-600 mb-4">실질적인 성과를 내는 도입 로드맵 수립</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
