--- a/c12_ethics/intro_ethics.html
+++ b/c12_ethics/intro_ethics.html
@@ -255,7 +255,7 @@
                                 1
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">오전: AI 윤리와 규제 트렌드</h3>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">Class 1: AI 윤리와 규제 트렌드</h3>
                                 <p class="text-gray-600 mb-4">국내외(EU AI Act) 법적 규제와 기업 리스크 분석</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
@@ -287,7 +287,7 @@
                                 2
                             </div>
                             <div class="flex-grow">
-                                <h3 class="text-xl font-bold text-gray-800 mb-2">오후: 실무 가이드라인 수립</h3>
+                                <h3 class="text-xl font-bold text-gray-800 mb-2">Class 2: 실무 가이드라인 수립</h3>
                                 <p class="text-gray-600 mb-4">우리 회사에 맞는 AI 사용 정책 및 보안 수칙 제정</p>
                                 <div class="bg-gray-50 rounded-xl p-4">
                                     <ul class="space-y-2">
